# lebai_ws

./: README.md
src/: README.md
src/.claude/: settings.local.json
src/inspection_sim/: CMakeLists.txt  package.xml
src/inspection_sim/launch/: display.launch  gazebo.launch  sim_env.launch.py
src/inspection_sim/meshes/: Empty_Link.STL  base_link.STL
src/inspection_sim/urdf/: ship_shaft.urdf  轴系urdf.csv
src/lebai_gripper_bridge/: package.xml  setup.cfg  setup.py
src/lebai_gripper_bridge/lebai_gripper_bridge/: gripper_bridge_node.py
src/lebai_inspection_system/: package.xml  setup.cfg  setup.py  机械臂巡检点操作.md
src/lebai_inspection_system/config/: inspection_points.yaml  task_params.yaml
src/lebai_inspection_system/launch/: inspection_real.launch.py  inspection_sim.launch.py
src/lebai_inspection_system/lebai_inspection_system/: fake_perception_node.py  inspection_logger_node.py  task_orchestrator_node.py
src/lebai_vision_grasp/: package.xml  setup.cfg  setup.py  操作说明.md
src/lebai_vision_grasp/config/: vision_grasp_params.yaml  vision_grasp_sim_params.yaml
src/lebai_vision_grasp/launch/: vision_grasp_real.launch.py  vision_grasp_sim.launch.py
src/lebai_vision_grasp/lebai_vision_grasp/: fake_target_position.py  gripper_sim_node.py  vision_grasp_orchestrator.py
src/lebai_with_gripper_and_shaft_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/lebai_with_gripper_and_shaft_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  lm3_with_shaft.ros2_control.xacro  lm3_with_shaft.srdf  lm3_with_shaft.urdf.xacro  moveit_controllers.yaml  moveit_controllers_real.yaml  ompl_planning.yaml  ros2_controllers.yaml  sensors_3d.yaml
src/lebai_with_gripper_and_shaft_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  real_robot.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/scripts/: close.py  end_teach_mode.py  initial_position.py  move.py  move2.py  read_data.py  start.py  stop.py  teach_mode.py  xuanniu.py
src/shaft/: CMakeLists.txt  package.xml
src/shaft/launch/: display.launch.py
src/shaft/meshes/: shaft_Link1.STL  shaft_base_link.STL
src/shaft/urdf/: shaft.csv  shaft.urdf
src/shaft_v1/: CMakeLists.txt  package.xml
src/shaft_v1/launch/: display.launch.py
src/shaft_v1/meshes/: shaft_Link1.STL  shaft_base_link.STL
src/shaft_v1/urdf/: shaft.csv  shaft.urdf
