<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lebai_gripper_bridge</name>
  <version>0.1.0</version>
  <description>
    将 MoveIt 的 FollowJointTrajectory Action 桥接到乐白夹爪的 SetGripper Service。
  </description>
  <maintainer email="shenyouyi123@gmail.com">shenyouyi</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclpy</depend>
  <depend>control_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>lebai_interfaces</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
